changed appearance for mainpage

--- a/illnessinfo.html
+++ b/illnessinfo.html
@@ -10,5 +10,9 @@
     <a href="mainpage.html"> <p>Main Page</p></a>
     <h1>Illness Info</h1>
 
+    <!--  these are all the articles that the illness info provides  -->
+    <a href="article1.html"> <h3>Article 1</h3></a>
+    <a href="article2.html"> <h3>Article 2</h3></a>
+
 </body>
 </html>
