--- a/mainpage.html
+++ b/mainpage.html
@@ -5,17 +5,33 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        body {
+          background-color: rgba(255, 255, 255, 0);
+        }
+        
+        h1 {
+          color: rgb(214, 76, 76);
+          margin-left: 60px;
+          margin-right: 60px;
+        }
+
+        h2 {
+            color: black;
+            margin-left: 60px;
+            margin-right: 60px;
+        }
+        </style>
 </head>
 <body>
-    <h1> (Website Name)    </h1>
-        
-    <a href="profile.html"><h2> Profile</h2></a> 
-    <a href="schedule.html"><h2> Schedule</h2></a>
-    <a href="illnessinfo.html"><h2> Illness Info </h2></a>
-    <a href="forum.html"> <h2> Forum </h2></a>
-    <a href="help.html"> <h2>Help</h2> </a>
-    <a href="info.html"> <h2>Info</h2></a>
-
-    <!-- illness info, forum, help, info-->
+    <center>
+        <h1> (Website Name)    </h1>
+        <a href="profile.html"><h2 style="border:orange; border-width:5px; border-style:double;"> Profile</h2></a> 
+        <a href="schedule.html"><h2 style="border:orange; border-width:5px; border-style:double;"> Schedule</h2></a>
+        <a href="illnessinfo.html"><h2 style="border:orange; border-width:5px; border-style:double;"> Illness Info </h2></a>
+        <a href="forum.html"> <h2 style="border:orange; border-width:5px; border-style:double;"> Forum </h2></a>
+        <a href="help.html"> <h2 style="border:orange; border-width:5px; border-style:double;">Help</h2> </a>
+        <a href="info.html"> <h2 style="border:orange; border-width:5px; border-style:double;">Info</h2></a>
+    </center>
 </body>
 </html>
