--- a/profile.html
+++ b/profile.html
@@ -5,10 +5,49 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=>, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        body {
+          background-color: rgba(255, 255, 255, 0);
+        }
+        
+        h1 {
+          color: rgb(214, 76, 76);
+          margin-left: 60px;
+          margin-right: 60px;
+        }
+
+        h2 {
+            color: black;
+            margin-left: 60px;
+            margin-right: 60px;
+        }
+        div.profilebackground {
+            position: relative;
+            width: 1200px;
+            height: 200px;
+            margin-left: 50px;
+            border: 3px solid #73AD21;
+        } 
+        div.profilepicture {
+            position: absolute;
+            top: 200px;
+            left: 50px;
+            width: 100px;
+            height: 100px;
+            border-radius: 6px;
+            margin-left: 50px;
+            border: 3px solid #73AD21;
+        }
+
+    </style>
 </head>
 <body>
     <a href="mainpage.html"> <p>Main Page</p></a>
-    <h1>Profile</h1>
+    <div class="profilebackground">
+        <p>This will be the background picture</p>
+    </div>
+
+    <div class="profilepicture"> <p>this is the profile picture </p></div>
 
 </body>
 </html>
